# VecSimEngineCpp

./: .gitignore  BgeEmbedderONNXRuntime.cpp  BgeEmbedderONNXRuntime.h  BgeTokenizerSentencePiece.cpp  BgeTokenizerSentencePiece.h  CMakeLists.txt  Tests.cpp  Tests.h  VectorSimilarityEngine.cpp  VectorSimilarityEngine.h  chats.jsonl  main.cpp  model_quantized.onnx
